# explore-dgp

./: .buildinfo  .gitignore  CONTRIBUTING.md  Makefile  README.md  api.html  changelog.html  cli-usage.html  conf.html  data.html  genindex.html  index.html  license.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  changelog.doctree  cli-usage.doctree  conf.doctree  data.doctree  environment.pickle  index.doctree  license.doctree  notebooks.doctree  readme.doctree  usage.doctree
.doctrees/__intersphinx_cache__/: python_objects.inv
.doctrees/notebooks/: oaxaca_failure_analysis.doctree
.github/actions/setup-python-env/: action.yml
.github/workflows/: docs.yml  main.yml
_modules/: index.html
_modules/explore_dgp/: analysis.html  dgps.html  utils.html
_sources/: conf.py.txt
_sources/notebooks/: akm_demonstration.py.txt  oaxaca_failure_analysis.py.txt
docs/jupyter_execute/: conf.ipynb
docs/jupyter_execute/notebooks/: oaxaca_failure_analysis.ipynb
docs/source/: api.md  cli-usage.md  conf.py  notebooks.md  usage.md
docs/source/notebooks/: akm_demonstration.py  oaxaca_failure_analysis.py
explore_dgp/: analysis.py  dgps.py
notebooks/: README.md  oaxaca_failure_analysis.html  oaxaca_failure_analysis.py  tabicl_test.py
pr-preview/pr-3/: .buildinfo  api.html  conf.html  genindex.html  index.html  objects.inv  readme.html  searchindex.js  usage.html
pr-preview/pr-3/.doctrees/: api.doctree  changelog.doctree  cli-usage.doctree  conf.doctree  environment.pickle  index.doctree  notebooks.doctree  usage.doctree
pr-preview/pr-3/.doctrees/__intersphinx_cache__/: python_objects.inv
pr-preview/pr-3/.doctrees/notebooks/: akm_demonstration.doctree  oaxaca_failure_analysis.doctree
pr-preview/pr-3/_modules/explore_dgp/: analysis.html  dgps.html
pr-preview/pr-3/_sources/: api.md.txt  conf.py.txt  index.md.txt  notebooks.md.txt
pr-preview/pr-3/_sources/notebooks/: oaxaca_failure_analysis.py.txt
pr-preview/pr-3/notebooks/: akm_demonstration.html  oaxaca_failure_analysis.html
tests/: test_akm.py  test_analysis.py  test_dgps.py  test_utils.py
